<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/header_rel_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_bg" >

        <TextView
            android:id="@+id/screen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:singleLine="true"
            android:text="@string/condtion_title"
            android:textColor="@color/White"
            android:textSize="20dip"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/condition_components"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true" >

        <CheckBox
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/condition_components"
            android:visibility="invisible"
            android:text="@string/location" />

        <Button
            android:id="@+id/location_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/location"
            android:text="@string/select" />

        <TextView
            android:id="@+id/txt_locpts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/location_points"
            android:layout_alignBottom="@+id/location_points"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/time"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <CheckBox
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/location_points"
            android:visibility="invisible"
            android:text="@string/time" />

        <TimePicker
            android:id="@+id/timePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/time" />

        <CheckBox
            android:id="@+id/teusday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timePicker1"
            android:layout_toRightOf="@+id/monday"
            android:text="@string/tuesday" />

        <CheckBox
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timePicker1"
            android:text="@string/monday" />

        <CheckBox
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/teusday"
            android:text="@string/wednesday" />

        <CheckBox
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/teusday"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/wednesday"
            android:text="@string/thursday" />

    </RelativeLayout>

    <CheckBox
        android:id="@+id/friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/condition_components"
        android:text="@string/friday" />

    <CheckBox
        android:id="@+id/saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/friday"
        android:layout_alignBottom="@+id/friday"
        android:layout_toRightOf="@+id/friday"
        android:text="@string/saturday" />

    <CheckBox
        android:id="@+id/sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/saturday"
        android:layout_alignBottom="@+id/saturday"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/saturday"
        android:text="@string/sunday" />

</RelativeLayout>