<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/header_rel_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_bg" >

        <TextView
            android:id="@+id/screen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:singleLine="true"
            android:text="@string/profile_settings"
            android:textColor="@color/White"
            android:textSize="20dip"
            android:textStyle="bold" />
        
        
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/not_vib_rel_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:layout_below="@+id/header_rel_layout" >

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="30dip"
            android:text="@string/vibrate" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginRight="33dp"
            android:layout_toLeftOf="@+id/checkBox2"
            android:text="@string/notifications" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/seek_bar_rel_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_below="@+id/not_vib_rel_layout" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="63dp"
            android:layout_marginTop="10dip"
            android:text="@string/brightness_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/seekBarBrightness"
            android:layout_width="200dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
			android:layout_below="@+id/textView3"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
   			android:layout_below="@+id/seekBarBrightness"
   			android:layout_marginLeft="63dp"
   			android:layout_marginTop="30dip"
            android:text="@string/ring_tone_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="200dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/wall_rt_rel_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_below="@+id/seek_bar_rel_layout" >

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="15dip"
            android:text="@string/wallpaper" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/checkBox5"
            android:layout_centerHorizontal="true"
            android:text="@string/select" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/button1"
            android:text="@string/sel_wall" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_below="@+id/checkBox5"
            android:text="@string/ringtone" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkBox4"
            android:layout_alignBottom="@+id/checkBox4"
            android:layout_toLeftOf="@+id/textView1"
            android:text="@string/select" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignTop="@+id/button2"
            android:text="@string/sel_rgtn" />

    </RelativeLayout>
   <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wall_rt_rel_layout">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher" />
        
    </RelativeLayout>
    
    
</RelativeLayout>