<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:id="@+id/header_rel_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_bg" >

            <TextView
                android:id="@+id/screen_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dip"
                android:singleLine="true"
                android:text="@string/add_rem"
                android:textColor="@color/White"
                android:textSize="20dip"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/eventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_rel_layout" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rem_what"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextWhat"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                android:ems="10"
                android:hint="@string/rem_what_en" >

                <requestFocus />
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/schedule"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eventName" >

            <TextView
                android:id="@+id/from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rem_from"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/btn_start_date"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/schedule"
                android:layout_below="@+id/from_date"
                android:text="Button" />

            <Button
                android:id="@+id/btn_start_date_all_day"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/schedule"
                android:layout_below="@+id/from_date"
                android:text="Button"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_start_time"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/from_date"
                android:text="Button" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/schedule_end"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/schedule" >

            <TextView
                android:id="@+id/till_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rem_to"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/btn_end_date"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/schedule"
                android:layout_below="@+id/till_date"
                android:text="Button" />

            <Button
                android:id="@+id/btn_end_date_all_day"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/schedule"
                android:layout_below="@+id/till_date"
                android:text="Button"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_end_time"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/till_date"
                android:text="Button" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relLay_chkbx"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/schedule_end" >

            <CheckBox
                android:id="@+id/checkBox_allday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="42dp"
                android:text="@string/rem_all_day" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relLay_timezone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relLay_chkbx" >

            <TextView
                android:id="@+id/tv_timezone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/rem_timezone"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/spinner_timezone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_timezone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relLay_sel_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relLay_timezone" >

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/rem_where"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/btn_where"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_location"
                android:text="Button" />

            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/btn_where"
                android:ems="10"
                android:hint="@string/rem_where" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relLay_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relLay_sel_location" >

            <TextView
                android:id="@+id/tv_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/rem_desc"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_des"
                android:ems="10"
                android:hint="@string/rem_desc_ed" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relLay_reminders"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relLay_description" >

            <TextView
                android:id="@+id/tv_rem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/rem"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/spinner_reminder_time"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_rem" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relLay_repitions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relLay_reminders" >

            <TextView
                android:id="@+id/tv_rep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/rem_rep"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/spinner_repitions"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_rep" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relLay_submit_cancle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relLay_repitions" >

            <Button
                android:id="@+id/submit"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />

            <Button
                android:id="@+id/cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="91dp"
                android:text="@string/cancle" />

        </RelativeLayout>
    </RelativeLayout>

</ScrollView>